[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/godot-xr-tools/functions/Function_Max_Payne_Dive_movement.gd" type="Script" id=1]

[node name="Function_Max_Payne_Dive_movement" type="Node" groups=["movement_providers"]]
script = ExtResource( 1 )


[node name="MP_Tween" type="Tween" parent="."]

[node name="MP_Sound" type="AudioStreamPlayer" parent="."]